# pmembench

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
.devcontainer/: devcontainer.json
cmake/: version.cmake
eval/: README.md
eval/fig/pmem2bench/: pmembench-chris80-libc-devdax-read-random-noflush.eps  pmembench-chris80-libc-devdax-read-sequential-noflush.eps  pmembench-chris80-libpmem2-devdax-read-random-noflush.eps  pmembench-chris80-libpmem2-devdax-read-sequential-noflush.eps  pmembench-chris80-libpmem2-devdax-write-random-movnt.eps  pmembench-chris80-libpmem2-devdax-write-random.eps  pmembench-chris80-libpmem2-devdax-write-sequential-movnt-bankConflict.eps  pmembench-chris80-libpmem2-devdax-write-sequential-movnt.eps  pmembench-chris80-libpmem2-devdax-write-sequential.eps  pmembench-chris90-libc-devdax-read-random-noflush.eps  pmembench-chris90-libc-devdax-read-sequential-noflush.eps  pmembench-chris90-libpmem2-devdax-read-random-noflush.eps  pmembench-chris90-libpmem2-devdax-read-sequential-noflush.eps  pmembench-chris90-libpmem2-devdax-write-random-movnt.eps  pmembench-chris90-libpmem2-devdax-write-random.eps  pmembench-chris90-libpmem2-devdax-write-sequential-movnt-bankConflict.eps  pmembench-chris90-libpmem2-devdax-write-sequential-movnt.eps  pmembench-chris90-libpmem2-devdax-write-sequential.eps  pmembench-comp-devdax-read.eps  pmembench-comp-devdax-write.eps  pmembench-devdax-read-bw-comp-opt-all.eps  pmembench-devdax-read-bw-comp-opt-max.eps  pmembench-devdax-write-bw-comp-opt-all.eps  pmembench-devdax-write-bw-comp-opt-max.eps  pmembench-pegasus-devdax-read-random.eps  pmembench-pegasus-devdax-read-sequential.eps  pmembench-pegasus-devdax-write-random-movnt.eps  pmembench-pegasus-devdax-write-random.eps  pmembench-pegasus-devdax-write-sequential-movnt.eps  pmembench-pegasus-devdax-write-sequential.eps  pmembench-pegasus-libc-devdax-read-random-noflush.eps  pmembench-pegasus-libc-devdax-read-sequential-noflush.eps  pmembench-pegasus-libpmem2-devdax-read-random-movnt.eps  pmembench-pegasus-libpmem2-devdax-read-random-noflush.eps  pmembench-pegasus-libpmem2-devdax-read-random.eps  pmembench-pegasus-libpmem2-devdax-read-sequential-movnt.eps  pmembench-pegasus-libpmem2-devdax-read-sequential-noflush.eps  pmembench-pegasus-libpmem2-devdax-read-sequential.eps  pmembench-pegasus-libpmem2-devdax-write-random-movnt.eps  pmembench-pegasus-libpmem2-devdax-write-random.eps  (+3 more)
eval/job/chris80/: pmem2bench.sh
eval/job/chris90/: pmem2bench.sh
eval/job/cygnus/: pmem2bench.job.sh  pmem2bench.sh
eval/job/pegasus/: pmem2bench.job.sh  pmem2bench.sh
eval/plot/: pmem2bench.ipynb
eval/raw/chris80/pmem2bench/2023.06.30-15.23.45/: r_random_devdax_128K_16_1.json  r_random_devdax_128K_16_2.json  r_random_devdax_128K_16_3.json  r_random_devdax_128K_1_1.json  r_random_devdax_128K_1_2.json  r_random_devdax_128K_1_3.json  r_random_devdax_128K_2_1.json  r_random_devdax_128K_2_2.json  r_random_devdax_128K_2_3.json  r_random_devdax_128K_4_1.json  r_random_devdax_128K_4_2.json  r_random_devdax_128K_4_3.json  r_random_devdax_128K_8_1.json  r_random_devdax_128K_8_2.json  r_random_devdax_128K_8_3.json  r_random_devdax_128_16_1.json  r_random_devdax_128_16_2.json  r_random_devdax_128_16_3.json  r_random_devdax_128_1_1.json  r_random_devdax_128_1_2.json  r_random_devdax_128_1_3.json  r_random_devdax_128_2_1.json  r_random_devdax_128_2_2.json  r_random_devdax_128_2_3.json  r_random_devdax_128_4_1.json  r_random_devdax_128_4_2.json  r_random_devdax_128_4_3.json  r_random_devdax_128_8_1.json  r_random_devdax_128_8_2.json  r_random_devdax_128_8_3.json  r_random_devdax_16K_16_1.json  r_random_devdax_16K_16_2.json  r_random_devdax_16K_16_3.json  r_random_devdax_16K_1_1.json  r_random_devdax_16K_1_2.json  r_random_devdax_16K_1_3.json  r_random_devdax_16K_2_1.json  r_random_devdax_16K_2_2.json  r_random_devdax_16K_2_3.json  r_random_devdax_16K_4_1.json  (+1310 more)
eval/raw/chris80/pmem2bench/2023.07.02-13.55.20/: r_random_nt_devdax_128K_16_1.json  r_random_nt_devdax_128K_16_2.json  r_random_nt_devdax_128K_16_3.json  r_random_nt_devdax_128K_1_1.json  r_random_nt_devdax_128K_1_2.json  r_random_nt_devdax_128K_1_3.json  r_random_nt_devdax_128K_2_1.json  r_random_nt_devdax_128K_2_2.json  r_random_nt_devdax_128K_2_3.json  r_random_nt_devdax_128K_4_1.json  r_random_nt_devdax_128K_4_2.json  r_random_nt_devdax_128K_4_3.json  r_random_nt_devdax_128K_8_1.json  r_random_nt_devdax_128K_8_2.json  r_random_nt_devdax_128K_8_3.json  r_random_nt_devdax_128_16_1.json  r_random_nt_devdax_128_16_2.json  r_random_nt_devdax_128_16_3.json  r_random_nt_devdax_128_1_1.json  r_random_nt_devdax_128_1_2.json  r_random_nt_devdax_128_1_3.json  r_random_nt_devdax_128_2_1.json  r_random_nt_devdax_128_2_2.json  r_random_nt_devdax_128_2_3.json  r_random_nt_devdax_128_4_1.json  r_random_nt_devdax_128_4_2.json  r_random_nt_devdax_128_4_3.json  r_random_nt_devdax_128_8_1.json  r_random_nt_devdax_128_8_2.json  r_random_nt_devdax_128_8_3.json  r_random_nt_devdax_16K_16_1.json  r_random_nt_devdax_16K_16_2.json  r_random_nt_devdax_16K_16_3.json  r_random_nt_devdax_16K_1_1.json  r_random_nt_devdax_16K_1_2.json  (+1765 more)
include/pmembench/: barrier.hpp  elapsedtime.hpp  gen_random_string.hpp  pretty_bytes.hpp  sense_barrier.hpp  spin_barrier.hpp  tls.hpp  unused.hpp
spack/envs/chris80/: spack.yaml
spack/envs/pnode/: spack.yaml
src/pmem2bench/: CMakeLists.txt  create_pmem2_source.hpp  main.cpp  memcpy_64.S  memcpy_gobble_mem_fwd_fix.S
src/pmemobjbench/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  barrier_test.cpp  tls_test.cpp
(+37972 files in other folders)
